language/python/ctype/src/foo.h

#ifndef FOO_H_
#define FOO_H_

int foo(Array *arr, int w, int h);
int foo1(int w, int h);
void foo2(int w, int h, int *ans);
int foo3(int **array, int w, int h);

void cFunc (int **x, int xLim, int yLim);

#endif /* !FOO_H_ */